[package]
name = "ibkr"
version = "0.2.0"
edition = "2024"
description = "A Rust client for the Interactive Brokers TWS API"
license = "AGPL-3.0"
authors = ["Wxveshack"]
keywords = ["ibkr", "interactive-brokers", "trading", "tws", "finance"]
categories = ["api-bindings", "finance"]
repository = "https://github.com/Wxveshack/ibkr"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "rt-multi-thread", "macros"] }
thiserror = "1"
